fixed alignment of right header content

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ button{
     font-size: 18px;
     color: #e5e7eb;
     margin-top: -25px;
-    margin-left: 1525px;
+    margin-left: 1585px;
     font-weight: 300;
 }
 
